criação tela login

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -18,7 +18,7 @@
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades.</p>
         <button onclick="document.location='index.html'">Voltar para a Home</button><br>
-        <button>Log In</button><br>
+        <button onclick="document.location='login.html'">Log In</button><br>
     </header>
 <main>
     <h2 id="principal"> Cadastro</h2>
