--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
         <button onclick="document.location='cadastro.html'">Cadastrar</button><br>
-        <button>Log In</button><br>
+        <button onclick="document.location='login.html'">Log In</button><br>
     </header>
     <main>
         <h2 id="principal">Brasil Acessível - acessibilidade de verdade!</h2>
