--- a/src/login.html
+++ b/src/login.html
@@ -59,58 +59,24 @@ var conteudoHtml = "";
 
 envia.onclick = registrado;
 function registrado()   {
-if(emeio.value == usuario[0].email && seguranca.value == usuario[0].senha) {
     let section = document.getElementById("logado");
 conteudoHtml = "";
 section.innerHTML = "";
-conteudoHtml += "<button aria-expanded='false'>Usuário: "+usuario[0].email+"</button>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>nome: "+usuario[0].nome+"</span>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>idade: "+usuario[0].idade+"</span>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>deficiência: "+usuario[0].deficiencia+"</span>";
-section.innerHTML = conteudoHtml;
-} else if (emeio.value == usuario[1].email && seguranca.value == usuario[1].senha) {
-    let section = document.getElementById("logado");
-conteudoHtml = "";
-section.innerHTML = "";
-conteudoHtml += "<button aria-expanded='false'>Usuário: "+usuario[1].email+"</button>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>nome: "+usuario[1].nome+"</span>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>idade: "+usuario[1].idade+"</span>";
-conteudoHtml += "<br>";
-conteudoHtml += "<span>deficiência: "+usuario[1].deficiencia+"</span>";
-section.innerHTML = conteudoHtml;
-
-} else {
-alert("usuário ou senha inválida");
-}
-/*
-}
-
-
-
-} || || emeio.value == usuario[2].email && seguranca.value == usuario[2].senha || emeio.value == usuario[3].email && seguranca.value == usuario[3].senha || emeio.value == usuario[4].email && seguranca.value == usuario[4].senha) {
-let section = document.getElementById("logado");
-conteudoHtml = "";
-section.innerHTML = "";
-
-for(let contador = 0; contador < usuario.length; contador++) {
+    for(let contador = 0; contador < usuario.length; contador++) {
 let dUsuario = usuario[contador];
-conteudoHtml += "<button aria-expanded='false'>Usuário: "+dUsuario.email+"</button>";
-conteudoHtml += "<span> teste </span>";
+if(emeio.value == dUsuario.email && seguranca.value == dUsuario.senha) {
+    conteudoHtml += "<button aria-expanded='false'>Usuário: "+dUsuario.email+"</button>";
+conteudoHtml += "<br>";
+conteudoHtml += "<span>nome: "+dUsuario.nome+"</span>";
+conteudoHtml += "<br>";
+conteudoHtml += "<span>idade: "+dUsuario.idade+"</span>";
+conteudoHtml += "<br>";
+conteudoHtml += "<span>deficiência: "+dUsuario.deficiencia+"</span>";
+section.innerHTML = conteudoHtml;
 break;
 }
-section.innerHTML = conteudoHtml;
-
 }
-else {
-    alert("Está errado");
-}
-*/
-
+alert("erro!");
 }
     </script>
 </body>
