correção do array clinicas, agora em perfeito funcionamento.

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,8 @@
         var dive = document.getElementById("menu");
         var restaurante = JSON.parse(bd).restaurantes;
         var clinica = JSON.parse(bd).clinicas;
+        var clinicaM = document.getElementById("clinicasmedica");
+        clinicaM.onclick = muda3;
         var loja = JSON.parse(bd).lojas;
         var lojaRoup = document.getElementById("lojasRoupa");
         lojaRoup.onclick = muda2;
