script do login pronto

--- a/src/login.html
+++ b/src/login.html
@@ -78,8 +78,10 @@ break;
 }
 }
 if(contador == 5) {     
-alert(contador);
-}
+alert("usuário ou senha invalidos!");
+} else {
+    alert("usuário logado com sucesso!");
+    }
 }
     </script>
 </body>
