Organização dos códigos
Foi feito uma organização dos códigos para uma melhor visualização.

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -156,26 +156,25 @@
                         <input type="text" id="servico2" name="servico2"
                             placeholder="ex: reparo de televisões e celulares" required>
                         <br>
-                        <label for="endereco2>Endereço do local da prestação de serviço</label>
-<input type=" text" id="endereco2" name="endereco2"
+                        <label for="endereco2">Endereço do local da prestação de serviço</label>
+                        <input type="text" id="endereco2" name="endereco2"
                             placeholder="a domicílio/ se for local fixo preencher rua, número, bairro e cep" required>
-                            <br>
-                            <label for="email2">E-mail</label>
-                            <input type="email" id="email2" placeholder="joaodasilva@example.com.br" name="email2"
-                                required>
-                            <br>
-                            <label for="confirmacaoEmail2">Confirme seu e-mail</label>
-                            <input type="email" id="confirmacaoEmail2" name="confirmacaoEmail2"
-                                placeholder="joaodasilva@example.com.br" required>
-                            <br>
-                            <label for="senha2">Crie uma senha</label>
-                            <input type="password" id="senha2" name="senha2" required>
-                            <br>
-                            <label for="confirmacaoSenha2">Confirme sua senha</label>
-                            <input type="password" id="confirmacaoSenha2" name="confirmacaoSenha2" required>
-                            <br>
-                            <button type="submit">Cadastrar Agora!</button>
-                            <br>
+                        <br>
+                        <label for="email2">E-mail</label>
+                        <input type="email" id="email2" placeholder="joaodasilva@example.com.br" name="email2" required>
+                        <br>
+                        <label for="confirmacaoEmail2">Confirme seu e-mail</label>
+                        <input type="email" id="confirmacaoEmail2" name="confirmacaoEmail2"
+                            placeholder="joaodasilva@example.com.br" required>
+                        <br>
+                        <label for="senha2">Crie uma senha</label>
+                        <input type="password" id="senha2" name="senha2" required>
+                        <br>
+                        <label for="confirmacaoSenha2">Confirme sua senha</label>
+                        <input type="password" id="confirmacaoSenha2" name="confirmacaoSenha2" required>
+                        <br>
+                        <button type="submit">Cadastrar Agora!</button>
+                        <br>
                     </fieldset>
                 </form>
                 <button id="verPrestador">Ver prestadores cadastrados</button>
@@ -236,25 +235,24 @@
                         <label for="servico3">Qual é o tipo de estabelecimento?</label>
                         <input type="text" id="servico3" name="servico3" placeholder="ex: restaurante" required>
                         <br>
-                        <label for="endereco3>Endereço da empresa</label>
-<input type=" text" id="endereco3" name="endereco3"
+                        <label for="endereco3">Endereço da empresa</label>
+                        <input type=" text" id="endereco3" name="endereco3"
                             placeholder="a domicílio/ se for local fixo preencher rua, número, bairro e cep" required>
-                            <br>
-                            <label for="email3">E-mail</label>
-                            <input type="email" id="email3" placeholder="joaodasilva@example.com.br" name="email3"
-                                required>
-                            <br>
-                            <label for="confirmacaoEmail3">Confirme seu e-mail</label>
-                            <input type="email" id="confirmacaoEmail3" name="confirmacaoEmail3"
-                                placeholder="joaodasilva@example.com.br" required>
-                            <br>
-                            <label for="senha3">Crie uma senha</label>
-                            <input type="password" id="senha3" name="senha3" required>
-                            <br>
-                            <label for="confirmacaoSenha3">Confirme sua senha</label>
-                            <input type="password" id="confirmacaoSenha3" name="confirmacaoSenha3" required>
-                            <br>
-                            <button type="submit">Cadastrar Agora!</button>
+                        <br>
+                        <label for="email3">E-mail</label>
+                        <input type="email" id="email3" placeholder="joaodasilva@example.com.br" name="email3" required>
+                        <br>
+                        <label for="confirmacaoEmail3">Confirme seu e-mail</label>
+                        <input type="email" id="confirmacaoEmail3" name="confirmacaoEmail3"
+                            placeholder="joaodasilva@example.com.br" required>
+                        <br>
+                        <label for="senha3">Crie uma senha</label>
+                        <input type="password" id="senha3" name="senha3" required>
+                        <br>
+                        <label for="confirmacaoSenha3">Confirme sua senha</label>
+                        <input type="password" id="confirmacaoSenha3" name="confirmacaoSenha3" required>
+                        <br>
+                        <button type="submit">Cadastrar Agora!</button>
                     </fieldset>
             </div>
         </section>
