Adição de páginas e acerto no Header
Foram adicionado as páginas em construção de Fale Conosco, Acessibilidade Legal e Sobre Nós.
Ajuste no header de algumas páginas.

--- a/src/acess_legal.html
+++ b/src/acess_legal.html
@@ -22,9 +22,15 @@
         <button onclick="document.location='cadastro.html'">Cadastrar</button><br>
         <button onclick="document.location='login.html'">Log In</button><br>
     </header>
-    <main>
 
+    <main>
+        <br>
+        <h1>Acessibilidade Legal</h1>
+        <br>
+        <h2>Página em construção</h2>
+        <br>
     </main>
+    
     <footer>
         <a id="rodape" href="fale_conosco.html"> Fale Conosco</a><br>
         <a href="acess_legal.html"> Acessibilidade Legal</a><br>
